force-app/main/default/objects/ucinn_ascendv2__Contact_Report_Relation__c/ucinn_ascendv2__Contact_Report_Relation__c.object-meta.xml
<CustomObject>
    <description>Junction object to associate contact report with constituent or organization.</description>
    <label>Contact Report Relation</label>
    <nameField>
        <label>Contact Report Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Report Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>