force-app/main/default/objects/ucinn_ascendv2__Contact_Report_Relation__c/fields/Contact_Managers_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contact_Managers_Formula__c</fullName>
    <formula>ucinn_ascendv2__Contact_Report__r.Contact_Managers__c</formula>
    <label>Contact Managers</label>
    <type>Text</type>
</CustomField>