force-app/main/default/objects/ucinn_ascendv2__Contact_Report_Relation__c/fields/Contact_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Report_Date__c</fullName>
    <formula>ucinn_ascendv2__Contact_Report__r.ucinn_ascendv2__Date__c</formula>
    <label>Contact Report Date</label>
    <type>Date</type>
</CustomField>