force-app/main/default/objects/ucinn_ascendv2__Contact_Report_Relation__c/fields/Contact_Report_Method__c.field-meta.xml
<CustomField>
    <fullName>Contact_Report_Method__c</fullName>
    <formula>TEXT(ucinn_ascendv2__Contact_Report__r.ucinn_ascendv2__Contact_Method__c)</formula>
    <label>Contact Report Method</label>
    <type>Text</type>
</CustomField>