force-app/main/default/objects/ucinn_ascendv2__Contact_Report_Relation__c/fields/Contact_Report_Significant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact_Report_Significant_Contact__c</fullName>
    <formula>ucinn_ascendv2__Contact_Report__r.ucinn_ascendv2__Is_Substantive_Contact__c</formula>
    <label>Contact Report Significant Contact</label>
    <type>Checkbox</type>
</CustomField>