force-app/main/default/objects/ucinn_ascendv2__Contact_Report_Relation__c/fields/Contact_Report_Two_Way_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Contact_Report_Two_Way_Exchange__c</fullName>
    <formula>ucinn_ascendv2__Contact_Report__r.Two_Way_Exchange__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Report Two Way Exchange</label>
    <type>Checkbox</type>
</CustomField>