force-app/main/default/objects/ucinn_ascendv2__Contact_Report_Relation__c/fields/CR_Constituent_FF__c.field-meta.xml
<CustomField>
    <fullName>CR_Constituent_FF__c</fullName>
    <formula>ucinn_ascendv2__Contact_Report__r.Constituent_FF__c</formula>
    <label>CR Constituent FF</label>
    <type>Text</type>
</CustomField>