force-app/main/default/objects/ucinn_ascendv2__Contact_Report_Relation__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Reports (Parent View)</relationshipLabel>
    <relationshipName>Contact_Report_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>