force-app/main/default/objects/ucinn_ascendv2__Contact_Report_Relation__c/fields/Spouse__c.field-meta.xml
<CustomField>
    <fullName>Spouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spouse</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Report Relations (Spouse)</relationshipLabel>
    <relationshipName>Spouse_Contact_Report_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>