force-app/main/default/objects/ucinn_ascendv2__Contact_Report_Relation__c/fields/ucinn_ascendv2__Contact_Report__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact_Report__c</fullName>
    <label>Contact Report</label>
    <referenceTo>ucinn_ascendv2__Contact_Report__c</referenceTo>
    <relationshipLabel>Contact Report Relations</relationshipLabel>
    <relationshipName>Contact_Report_Relations_Contact_Report</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>