force-app/main/default/objects/ucinn_ascendv2__Contact_Report_Relation__c/fields/ucinn_ascendv2__Contact_Report_Relation_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact_Report_Relation_Auto_Number__c</fullName>
    <displayFormat>CRR-{0000000}</displayFormat>
    <label>Contact Report Relation Auto Number</label>
    <type>AutoNumber</type>
</CustomField>