force-app/main/default/objects/ucinn_ascendv2__Contact_Report_Relation__c/fields/Update_Contact_Report_Relation__c.field-meta.xml
<CustomField>
    <fullName>Update_Contact_Report_Relation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Contact Report Relation</label>
    <type>Checkbox</type>
</CustomField>