force-app/main/default/objects/ucinn_ascendv2__Contact_Report_Relation__c/recordTypes/ucinn_ascendv2__Account_Contact_Report_Relation.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Account_Contact_Report_Relation</fullName>
    <active>true</active>
    <description>A report of contact made with an organization or household.</description>
    <label>Organization/Household Contact Report Relation</label>
</RecordType>