force-app/main/default/objects/ucinn_ascendv2__Contact_Report_Relation__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>ucinn_ascendv2__Contact_Report__c</columns>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Contact_Role__c</columns>
    <columns>Contact_Managers_Formula__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ucinn_ascendv2__Contact_Report_Relation__c.ucinn_ascendv2__Contact_Contact_Report_Relation</value>
    </filters>
    <filters>
        <field>Contact_Managers_Formula__c</field>
        <operation>contains</operation>
        <value>Jana Staudt</value>
    </filters>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>contains</operation>
        <value>staudt</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>7/5/2023 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>